--- a/index.html
+++ b/index.html
@@ -5,59 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>进阶数独游戏</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f0f0f0;
-      padding: 20px;
-    }
-    table {
-      margin: 0 auto;
-      border-collapse: collapse;
-      background: #fff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
+	body {
+	  font-family: Arial, sans-serif;
+	  text-align: center;
+	  background: #f0f0f0;
+	  padding: 20px;
+	}
+	table {
+	  margin: 0 auto;
+	  border-collapse: collapse;
+	  background: #fff;
+	  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+	  table-layout: fixed; /* 新增 */
+	}
 	td {
-	  width: 10vw;
-	  height: 10vw;
+	  width: min(10vw, 50px);
+	  height: min(10vw, 50px);
+	  min-width: 30px;
+	  min-height: 30px;
 	  max-width: 50px;
 	  max-height: 50px;
+	  position: relative;
 	}
-    input {
-      width: 100%;
-      height: 100%;
-	  font-size: 5vw;
-	  max-font-size: 24px;
-      text-align: center;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
-    input[readonly] {
-      background: #eee;
-      font-weight: bold;
-    }
-    .error {
-      background-color: #fdd !important;
-    }
-    td.thick-top    { border-top: 3px solid black; }
-    td.thick-left   { border-left: 3px solid black; }
-    td.thick-right  { border-right: 3px solid black; }
-    td.thick-bottom { border-bottom: 3px solid black; }
+	input {
+	  width: 100%;
+	  height: 100%;
+	  font-size: min(6vw, 30px);
+	  max-font-size: 20px;
+	  text-align: center;
+	  border: 1px solid #ccc;
+	  box-sizing: border-box;
+	  padding: 2px;
+	}
+	input[readonly] {
+	  background: #eee;
+	  font-weight: bold;
+	}
+	.error {
+	  background-color: #fdd !important;
+	}
+	td.thick-top    { border-top: 3px solid black; }
+	td.thick-left   { border-left: 3px solid black; }
+	td.thick-right  { border-right: 3px solid black; }
+	td.thick-bottom { border-bottom: 3px solid black; }
 
-    .btns {
-      margin-top: 15px;
-    }
-    button, select {
-      margin: 5px;
-      padding: 8px 16px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    #stats {
-      margin-top: 10px;
-      font-size: 16px;
-      color: #333;
-    }
+	.btns {
+	  margin-top: 15px;
+	}
+	button, select {
+	  margin: 5px;
+	  padding: 8px 16px;
+	  font-size: 16px;
+	  cursor: pointer;
+	}
+	#stats {
+	  margin-top: 10px;
+	  font-size: 16px;
+	  color: #333;
+	}
+
+	@media (max-width: 600px) {
+	  td {
+		min-width: 9vw;
+		min-height: 9vw;
+	  }
+	  input {
+		font-size: 6vw;
+	  }
+	  #stats {
+		font-size: 14px;
+	  }
+	  h1 {
+		font-size: 1.5rem;
+	  }
+	}
   </style>
 </head>
 <body>
